<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_mode">

    <ImageView
        android:id="@+id/imgViewComp"
        android:layout_width="136dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgViewPlayer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/rps"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtTitle1"
        android:layout_width="409dp"
        android:layout_height="54dp"
        android:background="@color/black"
        android:padding="10dp"
        android:paddingStart="40dp"
        android:text="@string/rock_paper_scissor"
        android:textColor="#ffff00"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/playername"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:padding="5dp"
        android:paddingStart="11dp"
        android:text="@string/player"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:padding="5dp"
        android:text="@string/computer"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="146dp"
        android:layout_height="71dp"
        android:backgroundTint="#FCEF01"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <ImageView
        android:id="@+id/imgViewPlayer"
        android:layout_width="136dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgViewComp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/rps" />

    <ImageButton
        android:id="@+id/imgrock"
        android:layout_width="81dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgpaper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741"
        app:srcCompat="@drawable/rock"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgpaper"
        android:layout_width="79dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgscissor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgrock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74"
        app:srcCompat="@drawable/paper"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgscissor"
        android:layout_width="76dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgpaper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        app:srcCompat="@drawable/scissor"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtScorePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imgViewPlayer"
        app:layout_constraintEnd_toStartOf="@+id/txtScoreCompter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playername"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/txtScoreCompter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imgViewComp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtScorePlayer"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>