<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="146dp">

    <EditText
        android:id="@+id/edtPlayerName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/player_s_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#A1887F"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edtRounds2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <EditText
        android:id="@+id/edtRounds2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/no_of_rounds"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#A1887F"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/btnplay"
        android:layout_width="162dp"
        android:layout_height="84dp"
        android:backgroundTint="#08B508"
        android:padding="10dp"
        android:text="@string/play"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRounds2"
        app:layout_constraintVertical_bias="0.311" />
</androidx.constraintlayout.widget.ConstraintLayout>